# ocean-chat

./: .gitignore  Cargo.toml  Cargo.toml~  Dioxus.toml  README.md  build.rs  flake.nix  index.html  shell.nix
.github/workflows/: build.yml  check.yml  test.yml
assets/: main.css  manifest.json  sw.js
dev-assets/: logo.svgz
files/: a_map  c_map  data.csv  dist  e_map  n_map  o_map  privacypolicy.md  scores  smalldist
files/sloan_desc/: rcoai  rcoan  rcoei  rcoen  rcuai  rcuan  rcuei  rcuen  rloai  rloan  rloei  rloen  rluai  rluan  rluei  rluen  scoai  scoan  scoei  scoen  scuai  scuan  scuei  scuen  sloai  sloan  sloen  sluai  sluan  sluei  sluen
src/: common.rs  data.rs  frontend.rs  lib.rs  main.rs  scores  scores.rs  server.rs  styles.css
src/client/: chat.rs  chat_state.rs  getstarted.rs  manual.css  manual.rs  mod.rs  personality.css  personality.rs  privacypolicy.rs  splash.css  splash.rs  test.rs  utils.rs
src/client/components/: mod.rs  nav_bar.rs
src/client/pages/: chat.rs  getstarted.rs  manual.rs  mod.rs  personality.rs  privacypolicy.rs  splash.rs  test.rs
src/client/pages/css/: personality.css  splash.css
src/common/: config.rs  distribution.rs  mod.rs  questions.rs  scores.rs  sloan.rs
src/frontend/: chat.rs  mod.rs
src/server/: connection.rs  mod.rs  socket_handler.rs  user.rs  waiting_users.rs
