[package]
name = "ocean-chat"
version = "0.1.0"
authors = ["Tor <torberge@outlook.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
tower-http = { version = "0.3.0", features = ["cors"] }

web-sys = {version = "0.3.69"}
http = "1.1.0"
wasm-bindgen = "0.2.92"
js-sys = "0.3"

once_cell = "1.19.0"


serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }

axum = {version = "0.6.0", optional=true, features = ["ws"]}
tokio = { version = "1.0", features = ["full"] , optional=true}
wasm-bindgen-futures = "0.4"
uuid = {version =  "1.8.0", features = ["v4"], optional=true}

futures-util = "0.3"
futures = "0.3"

[features]
server = ["axum", "tokio", "uuid"]
local = []
production = []

