[package]
name = "ocean-chat"
version = "0.1.0"
authors = ["Tor <torberge@outlook.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
tower-http = { version = "0.3.0", features = ["cors", "trace"] }
toml = "0.8.13"

web-sys = {version = "0.3.69"}
http = "1.1.0"
wasm-bindgen = "0.2.92"
js-sys = "0.3"
once_cell = "1.19.0"

serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }

axum = {version = "0.6.0", features = ["ws"], optional=true}
tokio = { version = "1.0", features = ["full"] , optional=true}
uuid = {version =  "1.8.0", features = ["v4", "js"]}

futures-util = "0.3"
futures = "0.3"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
strum = "0.26.2"
strum_macros = "0.26.2"

[dev-dependencies]
reqwest = "0.12.5"
tokio-tungstenite = "0.15.0"
url = "2.2.2"


[features]
#default = ["server"]
server = ["axum", "tokio"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.release-server]
inherits = "release"
opt-level = 3
